--- a/attachment/NeatSankey/City of Oakland Budget Sankey Particles_Neat.html
+++ b/attachment/NeatSankey/City of Oakland Budget Sankey Particles_Neat.html
@@ -160,7 +160,7 @@
                     //             node.x = level[m][n].x
                     //             node.y = level[m][n].y
                     //         }
-                    node.x = (node.x - startX) / realWidth * 1400// - startPlace
+                    node.x = (node.x - startX) / realWidth * width// - startPlace
                     node.dx = nodeWidth
                 })
                 // var remainingNodes = nodes,
@@ -335,9 +335,9 @@
         var units = "Widgets";
 
         var margin = {top: 10, right: 10, bottom: 10, left: 10},
-            width = 1400 - margin.left - margin.right,
+            width = 1420 - margin.left - margin.right,
             // width = 2500 - margin.left - margin.right,
-            height = 690 - margin.top - margin.bottom;
+            height = 760 - margin.top - margin.bottom;
 
         var formatNumber = d3.format(",.0f"),    // zero decimal places
             format = function (d) {
