--- a/attachment/NeatSankey/Energy flows in UK(2050)_Neat.html
+++ b/attachment/NeatSankey/Energy flows in UK(2050)_Neat.html
@@ -150,15 +150,7 @@
             function computeNodeBreadths() {
                 const startX = level[0][0].x
                 const endX = level[level.length - 1][0].x
-                const realWidth = endX - startX
-
-                // alert(realWidth)
-
-                const zoom = width / realWidth * 0.97
-
-                // alert(zoom)
-
-                // let startPlace = level[0][0].x / realWidth * 1400 - 30
+                const realWidth = endX - startX + 36
 
                 nodes.forEach(function (node) {
                     // for (let m =0 ;m< level.length; m++)
@@ -167,8 +159,7 @@
                     //             node.x = level[m][n].x
                     //             node.y = level[m][n].y
                     //         }
-                    node.x = (node.x - startX) * zoom// / realWidth * width// - startPlace
-                    // alert(node.x)
+                    node.x = (node.x - startX) / realWidth * width// / realWidth * width// - startPlace
                     node.dx = nodeWidth
                 })
             }
@@ -348,9 +339,9 @@
         var units = "Widgets";
 
         var margin = {top: 10, right: 10, bottom: 10, left: 10},
-            width = 1400 - margin.left - margin.right,
+            width = 1420 - margin.left - margin.right,
             // width = 2500 - margin.left - margin.right,
-            height = 740 - margin.top - margin.bottom;
+            height = 760 - margin.top - margin.bottom;
 
         var formatNumber = d3.format(",.0f"),    // zero decimal places
             format = function (d) {
@@ -478,7 +469,7 @@
             .attr("transform", null)
             .text(function (d) {
                 return d.name;
-            }).style("opacity", 0.8)
+            }).style("opacity", 0.5)
 
         // add in the links
         var link = svg
