--- a/attachment/NeatSankey/Immigrant Flow for Last Month_Neat.html
+++ b/attachment/NeatSankey/Immigrant Flow for Last Month_Neat.html
@@ -160,7 +160,7 @@
                     //             node.x = level[m][n].x
                     //             node.y = level[m][n].y
                     //         }
-                    node.x = (node.x - startX) / realWidth * 1400// - startPlace
+                    node.x = (node.x - startX) / realWidth * width
                     node.dx = nodeWidth
                 })
                 // var remainingNodes = nodes,
