--- a/attachment/Sugiyama/Energy flows in UK (2050)_sugiyama.html
+++ b/attachment/Sugiyama/Energy flows in UK (2050)_sugiyama.html
@@ -504,7 +504,7 @@
             .attr("transform", null)
             .text(function (d) {
                 return d.name;
-            })
+            }).style("opacity", 0.5)
         // .filter(function (d) { return d.x < width / 2; })
         // .attr("x", 6 + sankey.nodeWidth())
         // .attr("text-anchor", "start");
