--- a/attachment/NeatSankey/auto_generating_data3_Neat.html
+++ b/attachment/NeatSankey/auto_generating_data3_Neat.html
@@ -160,7 +160,7 @@
                     //             node.x = level[m][n].x
                     //             node.y = level[m][n].y
                     //         }
-                    node.x = (node.x - startX) / realWidth * 1400// - startPlace
+                    node.x = (node.x - startX) / realWidth * width// - startPlace
                     node.dx = nodeWidth
                 })
                 // var remainingNodes = nodes,
@@ -335,7 +335,7 @@
         var units = "Widgets";
 
         var margin = {top: 10, right: 10, bottom: 10, left: 10},
-            width = 1420 - margin.left - margin.right,
+            width = 1300 - margin.left - margin.right,
             // width = 2500 - margin.left - margin.right,
             height = 760 - margin.top - margin.bottom;
 
